WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13071
REGRESSION: Plain text files no longer wrap lines longer than the width of the browser window
https://bugs.webkit.org/show_bug.cgi?id=13071
Summary
REGRESSION: Plain text files no longer wrap lines longer than the width of th...
David Kilzer (:ddkilzer)
Reported
2007-03-14 11:18:55 PDT
Loading a plain text file with a line longer than the width of the browser window no longer wrap. Load test case to see the difference between WebKit and shipping Safari. This is a regression from shipping Safari 2.0.4 (419.3) on Mac OS X 10.4.8 (8L127). Tested with a local debug build of WebKit
r20188
.
Attachments
Test case
(315 bytes, text/plain)
2007-03-14 11:19 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Specify word-wrap:break-word
(30.47 KB, patch)
2007-03-14 15:14 PDT
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2007-03-14 11:19:35 PDT
Created
attachment 13632
[details]
Test case
mitz
Comment 2
2007-03-14 12:13:35 PDT
I think this can be corrected by tweaking the style of the <pre> element used in text documents. The test case also reveals a regression in white-space:pre-wrap, see
bug 13072
.
mitz
Comment 3
2007-03-14 15:14:37 PDT
Created
attachment 13639
[details]
Specify word-wrap:break-word
Dave Hyatt
Comment 4
2007-03-14 17:09:14 PDT
Comment on
attachment 13639
[details]
Specify word-wrap:break-word r=me
Sam Weinig
Comment 5
2007-03-14 18:50:50 PDT
Landed in
r20202
.
David Kilzer (:ddkilzer)
Comment 6
2007-06-24 12:04:51 PDT
Mass removal of NeedsRadar keyword from my bugs that have already been RESOLVED.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug