LayoutTests:

Reviewed by Hyatt.

        - test for://bugs.webkit.org/show_bug.cgi?id=13071
          REGRESSION: Plain text files no longer wrap lines longer than the width of the browser window

        * fast/loader/resources/text-document-wrapping.txt: Added.
        * fast/loader/text-document-wrapping-expected.checksum: Added.
        * fast/loader/text-document-wrapping-expected.png: Added.
        * fast/loader/text-document-wrapping-expected.txt: Added.
        * fast/loader/text-document-wrapping.html: Added.

WebCore:

        Reviewed by Hyatt.

        - http://bugs.webkit.org/show_bug.cgi?id=13071
          REGRESSION: Plain text files no longer wrap lines longer than the width of the browser window

        Test: fast/loader/text-document-wrapping.html

        * loader/TextDocument.cpp:
        (WebCore::TextTokenizer::write): Specified word-wrap:break-word for the <pre> element.



Canonical link: https://commits.webkit.org/16998@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20202 268f45cc-cd09-0410-ab3c-d52691b4dbfc