WebCore/loader/TextDocument.cpp
@@ -119,7 +119,7 @@ bool TextTokenizer::write(const SegmentedString& s, bool appendData)
         rootElement->appendChild(body, ec);
 
         RefPtr<Element> preElement = m_doc->createElementNS(xhtmlNamespaceURI, "pre", ec);
-        preElement->setAttribute("style", "white-space: pre-wrap;", ec);
+        preElement->setAttribute("style", "word-wrap: break-word; white-space: pre-wrap;", ec);
 
         body->appendChild(preElement, ec);
         
